[tool.poetry]
name = "analysys"
version = "0.1.0"
description = ""
authors = ["Kanda"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.2.1"
numpy = "^1.18.2"
PySimpleGUI = "^4.16.0"
pyperclip = "^1.8.2"
bokeh = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
